karl package Changelog
======================

3.120 (2014-02-26)
------------------

- Replace 'error' level logging in AJAX file methods with 'info' level.  See
  https://bugs.launchpad.net/karl3/+bug/795661

- When generating a thumbnail for an image smaller than the requested thumbnail
  size, just return the image file within the ``thumbnail`` method of
  karl.content.models.files.CommunityFile.  See
  https://bugs.launchpad.net/karl3/+bug/1271919

3.119 (2013-12-13)
------------------

- Change timeit to display above copyright in white font, onhover to
  gray, but with the hostname and elapsed time. (LP #1260486)

3.118 (2013-12-10)
------------------

- Add "CS." prefix for all metrics in the context of a catalog search.

3.117 (2013-11-20)
------------------

- Do case-insensitive matching to weed out duplicates in the BCC handling.
  (Gocept #90973)

3.116 (2013-11-13)
------------------

- Update 'edit_acl' view to avoid reindexing an object which has no 'docid'
  (e.g., peopledirectory entities).

- Added support for updating peopledir via JSON.

3.115 (2013-09-26)
------------------

- Kaltura's web service apparently started sending an empty error
  instead of no error. Change our test condition. (LP #1221259).

- Provide some help text for moderators above the calendar notes table,
  explaining how they can re-order by dragging the handle around.
  (LP #1218587)

- Print view had a chopped-off right margin. Fixed previously but
  likely lost in a merge. (LP #1231571)

3.114.1 (2013-08-29)
--------------------

- Fix merge of 'sendalert_default' handling for files tool.

3.114 (2013-08-29)
------------------

- Order calendar notes (LP #1193129)

- Allow setting default on sendalert at the community level (LP #1207087)

- Prevent broken profile photo from breaking livesearch (LP #1218026).

3.113 (2013-08-23)
------------------

- Extend fix for duplicate mail delivery bug in BCC handling:  check