@@ -72,6 +72,9 @@
           <div class="portlet-item" tal:condition="'metrics' in request.context">
               <a href="${request.resource_url(request.context['metrics'])}">Metrics</a>
           </div>
+          <div class="portlet-item" tal:condition="api.can_administer">
+            <a href="${api.app_url}/debug_converters.html">Debug Converters</a>
+          </div>
         </div>
       </div>
     </metal:menu>
